# ai-resume-matcher

./: .gitignore  README.md  TestResume.txt  docker-compose.yml  pyproject.toml
backend/: Dockerfile  config.py  db.py  llm.py  main.py  models.py  requirements.txt
frontend/: Dockerfile  app.py
